[package]
name = "treescan"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
quote = "1.0"
libc = "0.2"
tree-sitter = "0.25.8"
tree-sitter-java = "0.23.5"
tree-sitter-zig = "1.1.2"
tree-sitter-c = "0.24.1"
tree-sitter-cpp = "0.23.4"
tree-sitter-typescript = "0.23.2"
tree-sitter-javascript = "0.23.1"
tree-sitter-rust = "0.24.0"
serde_json = "1.0.141"
tree-sitter-go = "0.23.4"
